# artdaq_lme

./: .mrbversion  CMakeLists.txt
artdaq/: .gitignore  CMakeLists.txt
artdaq/artdaq/: CMakeLists.txt
artdaq/artdaq/Application/: BoardReaderApp.cc  BoardReaderApp.hh  BoardReaderCore.cc  BoardReaderCore.hh  CMakeLists.txt  Commandable.cc  Commandable.hh  Commandable.sm  CommandableFragmentGenerator.cc  CommandableFragmentGenerator.fcl  CommandableFragmentGenerator.hh  CompositeDriver.hh  CompositeDriver_generator.cc  DataLoggerApp.cc  DataLoggerApp.hh  DataLoggerCore.cc  DataLoggerCore.hh  DataReceiverCore.cc  DataReceiverCore.hh  DispatcherApp.cc  DispatcherApp.hh  DispatcherCore.cc  DispatcherCore.hh  EventBuilderApp.cc  EventBuilderApp.hh  EventBuilderCore.cc  EventBuilderCore.hh  GeneratorMacros.hh  LoadParameterSet.hh  RoutingMasterApp.cc  RoutingMasterApp.hh  RoutingMasterCore.cc  RoutingMasterCore.hh  StatisticsHelper.cc  StatisticsHelper.hh  TaskType.hh  makeCommandableFragmentGenerator.cc  makeCommandableFragmentGenerator.hh
artdaq/artdaq/ArtModules/: ArtdaqBuildInfo_module.cc  ArtdaqInput.hh  BinaryFileOutput_module.cc  BinaryNetOutput_module.cc  BuildInfo_module.hh  CMakeLists.txt  EventDump_module.cc  MissingDataCheck_module.cc  NetMonInput_source.cc  NetMonTransportService.h  NetMonTransportServiceInterface.h  NetMonTransportService_service.cc  NetMonWrapper.cc  NetMonWrapper.hh  PrintBuildInfo_module.cc  RandomDelayFilter_module.cc  RawInput_source.cc  RootNetOutput.hh  RootNetOutput_module.cc  TransferInput_source.cc  TransferOutput_module.cc
artdaq/artdaq/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
artdaq/artdaq/DAQdata/: CMakeLists.txt  GenericFragmentSimulator.hh  GenericFragmentSimulator_generator.cc  Globals.cc  Globals.hh  NetMonHeader.hh  PortManager.cc  PortManager.hh  TCPConnect.cc  TCP_listen_fd.cc  TCP_listen_fd.hh
artdaq/artdaq/DAQrate/: CMakeLists.txt  DataReceiverManager.cc  DataReceiverManager.hh  DataSenderManager.cc  DataSenderManager.hh  FragmentReceiverManager.cc  FragmentReceiverManager.hh  RequestReceiver.cc  RequestReceiver.hh  RequestSender.cc  RequestSender.hh  SharedMemoryEventManager.cc  SharedMemoryEventManager.fcl  SharedMemoryEventManager.hh  TransferTest.cc  TransferTest.hh  infoFilename.cc  infoFilename.hh
artdaq/artdaq/ExternalComms/: CMakeLists.txt  CommanderInterface.cc  CommanderInterface.hh  MakeCommanderPlugin.cc  MakeCommanderPlugin.hh  xmlrpc_commander.cc  xmlrpc_commander.hh
artdaq/artdaq/RTIDDS/: CMakeLists.txt  RTIDDS.cc  RTIDDS.hh
artdaq/artdaq/TransferPlugins/: Autodetect_transfer.cc  CMakeLists.txt  MakeTransferPlugin.cc  MakeTransferPlugin.hh  Multicast_transfer.cc  Null_transfer.cc  RTIDDS_transfer.cc  ShmemTransfer.hh  Shmem_transfer.cc  TCPSocketTransfer.hh  TCPSocket_transfer.cc  TransferInterface.cc  TransferInterface.hh
artdaq/doc/: CMakeLists.txt
artdaq/doc/sample_MPMD_runs/: cpiA.cc  cpiB.cc
artdaq/proto/: CMakeLists.txt  PrintSharedMemory.cc  artdaq.cc  artdaqapp.hh  boardreader.cc  datalogger.cc  dispatcher.cc  driver.cc  eventbuilder.cc  fhicl_test.cc  requestReceiver.cc  requestSender.cc  routing_master.cc  tracemf.cc  transfer_plugin_receiver.cc  transfer_plugin_sender.cc
artdaq/proto/fcl/: Multicast.fcl  Shmem.fcl  aggregator.fcl  artdaq.fcl  dispatcher.fcl  fileReader.fcl  test_fhicl.fcl
artdaq/test/: CMakeLists.txt
artdaq/test/Application/: CMakeLists.txt  CommandableFragmentGenerator_t.cc
artdaq/test/ArtModules/: CMakeLists.txt  FragmentSniffer_module.cc  daq_flow_t.cc  daq_flow_t.fcl  driver_t.fcl  read_files_t.fcl  reconfigure_t.cc  shared_memory_reader_t.cc
artdaq/test/DAQdata/: CMakeLists.txt  GenericFragmentSimulator_t.cc
artdaq/test/DAQrate/: CMakeLists.txt  DataReceiverManager_t.cc  FragCounter_t.cc  RequestSender_t.cc  SharedMemoryEventManager_t.cc  requestsender.fcl
artdaq/test/ExternalComms/: CMakeLists.txt  commander_test.cc
artdaq/test/Plugins/: CMakeLists.txt  MetricManager_t.cc
artdaq/test/TransferPlugins/: CMakeLists.txt  runTransferTest.sh  transfer_driver.cc
artdaq/tools/: CMakeLists.txt  StateResponder.cc  disk_stats.sh  genToArt.cc  installEpicsPlugin.sh  installGangliaPlugin.sh  installMessageViewer.sh  periodic_cmd_stats.cc  setupMpichPlugin.sh
artdaq/tools/fcl/: MsgFacCfgSample1.fcl  genToArt_outToBinaryFileOutput_t.fcl  genToArt_outToBinaryMPIOutput_t.fcl  genToArt_t.fcl
artdaq/ups/: product_deps
artdaq_core_dune/: CMakeLists.txt
artdaq_dune/: CMakeLists.txt
artdaq_dune/artdaq-dune/ArtModules/: ASCIIDump_module.cc  ArtdaqDemoBuildInfo_module.cc  CMakeLists.txt  CheckIntegrity_module.cc  DemoInput_source.cc  EventReporterOutput_module.cc  Graficador_module.cc  ModuloGenerico_module.cc  ToyDumpPrueba_module.cc  ToyDump_module.cc  WFViewer_module.cc
artdaq_dune/artdaq-dune/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
artdaq_dune/artdaq-dune/Generators/: .PruebaSimulator.hh.swo  .PruebaSimulator.hh.swp  .ToySimulator.hh.swp  .ToySimulator_generator.cc.swp  Arduino.hh  Arduino_generator.cc  AsciiSimulator.hh  AsciiSimulator_generator.cc  CMakeLists.txt  PruebaSimulator.hh  PruebaSimulator_generator.cc  PruebaV2Simulator.hh  PruebaV2Simulator_generator.cc  ToySimulator.hh  ToySimulator_generator.cc  UDPReceiver_generator.cc
artdaq_dune/artdaq-dune/RoutingPolicies/: CMakeLists.txt  NthEvent_policy.cc
artdaq_dune/artdaq-dune/TransferPlugins/: CMakeLists.txt  NthEvent_transfer.cc
artdaq_dune/test/RoutingPolicies/: CMakeLists.txt  NthEvent_policy_t.cc
artdaq_dune/tools/: CMakeLists.txt  quick-mrb-start.sh  run_demo.sh  xt_cmd.sh
artdaq_dune/tools/fcl/: DemoDriverNoDisk.fcl  DemoDriverWithDisk.fcl  TransferInputShmem (copy).fcl  TransferInputShmem.fcl  TransferInputShmemWithDelay.fcl  driver.fcl  driver_test1a.fcl  test_10Mx30000_binbuf3.fcl  test_10Mx30000_binbuf4.fcl  test_10Mx30000_binnull3.fcl  test_10Mx30000_binnull4.fcl  test_10Mx30000_root2.fcl  test_10Mx30000_root3.fcl  test_10Mx30000_root3null.fcl  test_10Mx30000_root4.fcl
artdaq_dune/ups/: product_deps
(+102 files in other folders)
